--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "ktsirangelos",
   "license": "ISC",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.16",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
