--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../playground/phonebook/ && npm run build && cp -r build ../../fso-part3",
+    "build:ui": "rm -rf build && cd ../fso/part3/phonebook-updated-frontend && npm run build && cp -r build ../../../fso-part3",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
